@@ -4,23 +4,63 @@ use strict;
 use warnings;
 
 use Class::Utils qw(set_params);
+use Error::Pure qw(err);
+use List::MoreUtils qw(none);
 use Readonly;
 use Unicode::UTF8 qw(decode_utf8);
 
+Readonly::Array our @SIGN_TYPES => qw(sign ascii);
 Readonly::Hash our %ZODIAC => (
-	1 => decode_utf8('♈'), # Aries/Beran
-	2 => decode_utf8('♉'), # Taurus/Býk
-	3 => decode_utf8('♊'), # Gemini/Blíženci
-	4 => decode_utf8('♋'), # Cancer/Rak
-	5 => decode_utf8('♌'), # Leo/Lev
-	6 => decode_utf8('♍'), # Virgo/Panna
-	7 => decode_utf8('♎'), # Libra/Váhy
-	8 => decode_utf8('♏'), # Scorpio/Štír
-	9 => decode_utf8('♐'), # Sagittarius/Střelec
-	10 => decode_utf8('♑'), # Capricorn/Kozoroh
-	11 => decode_utf8('♒'), # Aquarius/Vodnář
-	12 => decode_utf8('♓'), # Pisces/Ryby
+	1 => {
+		'sign' => decode_utf8('♈'), # Aries/Beran
+		'ascii' => 'ar',
+	},
+	2 => {
+		'sign' => decode_utf8('♉'), # Taurus/Býk
+		'ascii' => 'ta',
+	},
+	3 => {
+		'sign' => decode_utf8('♊'), # Gemini/Blíženci
+		'ascii' => 'ge',
+	},
+	4 => {
+		'sign' => decode_utf8('♋'), # Cancer/Rak
+		'ascii' => 'ca',
+	},
+	5 => {
+		'sign' => decode_utf8('♌'), # Leo/Lev
+		'ascii' => 'le',
+	},
+	6 => {
+		'sign' => decode_utf8('♍'), # Virgo/Panna
+		'ascii' => 'vi',
+	},
+	7 => {
+		'sign' => decode_utf8('♎'), # Libra/Váhy
+		'ascii' => 'li',
+	},
+	8 => {
+		'sign' => decode_utf8('♏'), # Scorpio/Štír
+		'ascii' => 'sc',
+	},
+	9 => {
+		'sign' => decode_utf8('♐'), # Sagittarius/Střelec
+		'ascii' => 'sa',
+	},
+	10 => {
+		'sign' => decode_utf8('♑'), # Capricorn/Kozoroh
+		'ascii' => 'ca',
+	},
+	11 => {
+		'sign' => decode_utf8('♒'), # Aquarius/Vodnář
+		'ascii' => 'aq',
+	},
+	12 => {
+		'sign' => decode_utf8('♓'), # Pisces/Ryby
+		'ascii' => 'pi',
+	},
 );
+Readonly::Scalar our $SPACE => ' ';
 
 our $VERSION = 0.03;
 
@@ -50,6 +90,12 @@ sub angle2zodiac {
 	if (! exists $opts_hr->{'second_round'}) {
 		$opts_hr->{'second_round'} = 4;
 	}
+	if (! exists $opts_hr->{'sign_type'}) {
+		$opts_hr->{'sign_type'} = 'sign';
+	}
+	if (none { $opts_hr->{'sign_type'} eq $_ } @SIGN_TYPES) {
+		err "Parameter 'sign_type' is bad. Possible values are 'sign' and 'ascii'.";
+	}
 
 	my $ret = {};
 
@@ -78,12 +124,29 @@ sub angle2zodiac {
 	$ret->{'angle_degree'} = $full_angle_degree - ($ret->{'sign'} * 30);
 
 	# Output.
-	my $zodiac_angle = $ret->{'angle_degree'}.decode_utf8('°').$ZODIAC{$ret->{'sign'} + 1};
-	if ($opts_hr->{'minute'}) {
-		$zodiac_angle .= $ret->{'angle_minute'}.decode_utf8("′");
-	}
-	if ($opts_hr->{'second'}) {
-		$zodiac_angle .= $ret->{'angle_second'}.decode_utf8("′′");
+	my $zodiac_angle;
+
+	# Output with sign (UTF-8).
+	if ($opts_hr->{'sign_type'} eq 'sign') {
+		$zodiac_angle = $ret->{'angle_degree'}.decode_utf8('°').
+			$ZODIAC{$ret->{'sign'} + 1}->{'sign'};
+		if ($opts_hr->{'minute'}) {
+			$zodiac_angle .= $ret->{'angle_minute'}.decode_utf8("′");
+			if ($opts_hr->{'second'}) {
+				$zodiac_angle .= $ret->{'angle_second'}.decode_utf8("′′");
+			}
+		}
+
+	# Output with ascii.
+	} else {
+		$zodiac_angle = $ret->{'angle_degree'}.$SPACE.
+			$ZODIAC{$ret->{'sign'} + 1}->{'ascii'};
+		if ($opts_hr->{'minute'}) {
+			$zodiac_angle .= $SPACE.$ret->{'angle_minute'}."'";
+			if ($opts_hr->{'second'}) {
+				$zodiac_angle .= $ret->{'angle_second'}."''";
+			}
+		}
 	}
 
 	return $zodiac_angle;
@@ -136,7 +199,7 @@ Convert angle to Zodiac angle.
 
 Options defined C<$opts_hr> control output. Possible keys in reference to hash
 are: minute (0/1 print minutes), second (0/1 print second), second_round (number
-of round numbers, default 4).
+of round numbers, default 4), sign_type (sign or ascii, default sign).
 
 Default value of C<$opts_hr> is { minute => 1 }.
 
@@ -155,6 +218,9 @@ Returns angle.
  new():
          From Class::Utils::set_params():
                  Unknown parameter '%s'.
+
+ angle2zodiac():
+         Parameter 'sign_type' is bad. Possible values are 'sign' and 'ascii'.
 
 =head1 EXAMPLE1
 
@@ -252,9 +318,46 @@ Returns angle.
  # Angle: 0.5
  # Zodiac angle: 0°♈30′0.0000′′
 
+=head1 EXAMPLE4
+
+ use strict;
+ use warnings;
+
+ use Zodiac::Angle;
+ use Unicode::UTF8 qw(encode_utf8);
+
+ # Object.
+ my $obj = Zodiac::Angle->new;
+
+ if (@ARGV < 1) {
+         print STDERR "Usage: $0 angle\n";
+         exit 1;
+ }
+ my $angle = $ARGV[0];
+
+ my $zodiac_angle = Zodiac::Angle->new->angle2zodiac($angle, {
+         'minute' => 1,
+         'second' => 1,
+         'second_round' => 4,
+         'sign_type' => 'ascii',
+ });
+
+ # Print out.
+ print 'Angle: '.$angle."\n";
+ print 'Zodiac angle: '.encode_utf8($zodiac_angle)."\n";
+
+ # Output without arguments:
+ # Usage: __SCRIPT__ angle
+
+ # Output with '0.5' argument:
+ # Angle: 0.5
+ # Zodiac angle: 0° ar 30'0.0000''
+
 =head1 DEPENDENCIES
 
 L<Class::Utils>,
+L<Error::Pure>,
+L<List::MoreUtils>,
 L<Readonly>,
 L<Unicode::UTF8>.
 
