@@ -25,6 +25,8 @@ no_index:
     - xt
 requires:
   Class::Utils: 0.03
+  Error::Pure: 0
+  List::MoreUtils: 0
   Readonly: 0
   Unicode::UTF8: 0
   perl: 5.6.2
