@@ -19,6 +19,8 @@ perl_version 5.006002;
 readme_from 'Angle.pm';
 recursive_author_tests('xt');
 requires 'Class::Utils' => 0.03;
+requires 'Error::Pure' => 0;
+requires 'List::MoreUtils' => 0;
 requires 'Readonly' => 0;
 requires 'Unicode::UTF8' => 0;
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
